# TECHIN516

./: [D  [D.pub  .gitignore
final_ws/: README.md  frames_2025-03-12_10.46.48.gv
final_ws/src/task_controller/: package.xml  setup.cfg  setup.py
final_ws/src/task_controller/task_controller/: back.py  maze.py  maze1.py  move.py  put.csv  run.py  runrun.py  total.py
kinova_ws/src/lab_quaternion/: package.xml  setup.py
kinova_ws/src/lab_quaternion/lab_quaternion/: data.csv  data_pick (copy).csv  data_pick.csv  grasp.csv  grasp.py  green_cube_pick_data.csv  green_cube_put_data.csv  pick_and_place.py  (+3 more)
lab0/__MACOSX/: ._lab0_linux
lab0/__MACOSX/lab0_linux/: ._CMakeLists.txt  ._car_brain.py  ._example1.py  ._example2.py  ._move_car.py  ._sample1.txt  ._sample2.txt  ._tobedelete1.txt  ._tobedelete2.txt
lab0/lab0_linux/: CMakeLists.txt  car_brain.py  example1.py  example2.py  move_car.py  sample1.txt  sample2.txt  tobedelete1.txt  tobedelete2.txt
lab1/: plot_odom.py
lab1/src/lab1_plot/: package.xml  setup.cfg  setup.py
lab1/t516_lab1/: package.xml  setup.py
lab7/: data.csv  data111.csv
lab7/my_lab7_package/: package.xml  setup.cfg  setup.py
lab7/my_lab7_package/my_lab7_package/: trajectory_from_csv.py
turtlebot_ws/: frames_2025-02-08_17.38.57.gv  frames_2025-02-08_17.42.32.gv  frames_2025-02-08_17.44.02.gv  frames_2025-02-11_17.30.50.gv  frames_2025-02-11_17.34.43.gv
turtlebot_ws/src/closed_loop_control/: package.xml  setup.cfg  setup.py
turtlebot_ws/src/send_robot/: package.xml  setup.cfg  setup.py
turtlebot_ws/src/t516_lab1/: setup.py
(+14 files in other folders)
